Change mqtt discovery prefix back to the default
room-assistant doesn't seem to have a way to customize to discovery prefix

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -164,7 +164,7 @@ mqtt:
   client_id: home-assistant
   keepalive: 60
   discovery: true
-  discovery_prefix: ha
+  discovery_prefix: homeassistant
 
 rfxtrx:
   device: /dev/ttyUSB22
