--- a/packages/bedroom-main2/settings.yaml
+++ b/packages/bedroom-main2/settings.yaml
@@ -6,3 +6,4 @@ group:
       - input_number.bedroom_main2_temperature_off
       - input_number.bedroom_main2_temperature_cosy
       - input_number.bedroom_main2_temperature_sleep
+      - automation.bedroom_main2_set_real_thermostats
