--- a/people/thomas.yaml
+++ b/people/thomas.yaml
@@ -7,6 +7,8 @@ homeassistant:
     device_tracker.thomas_phone:
       entity_picture: *ep
       friendly_name: "Tom Owntracks"
+    person.thomas_northcote:
+      entity_picture: *ep
 
 group:
   thomas_present:
