hot-water: schedule to match manual heating thermostat schedule

--- a/automation/hot-water.yaml
+++ b/automation/hot-water.yaml
@@ -12,11 +12,14 @@
     condition: or
     conditions:
       - condition: time
-        after: '09:00:00'
+        after: '08:30:00'
         before: '16:00:00'
       - condition: time
-        after: '20:00:00'
-        before: '05:00:00'
+        after: '17:00:00'
+        before: '19:30:00'
+      - condition: time
+        after: '20:30:00'
+        before: '06:30:00'
   action:
     service: switch.turn_off
     entity_id: switch.main_heating_relay_instance_2_switch
@@ -30,11 +33,14 @@
     condition: or
     conditions:
       - condition: time
-        after: '05:00:00'
-        before: '09:00:00'
+        after: '06:30:00'
+        before: '08:30:00'
       - condition: time
         after: '16:00:00'
-        before: '20:00:00'
+        before: '17:00:00'
+      - condition: time
+        after: '19:30:00'
+        before: '20:30:00'
   action:
     service: switch.turn_on
     entity_id: switch.main_heating_relay_instance_2_switch
