--- a/configuration.yaml
+++ b/configuration.yaml
@@ -198,12 +198,13 @@ input_boolean: !include_dir_merge_named input_boolean
 input_select: !include_dir_merge_named input_select
 script: !include_dir_merge_named scripts
 
-panel_custom:
-  - name: floorplan
-    sidebar_title: Floorplan
-    sidebar_icon: mdi:home
-    url_path: floorplan
-    config: !include floorplan.yaml
+## FIXME:
+#panel_custom:
+#  - name: floorplan
+#    sidebar_title: Floorplan
+#    sidebar_icon: mdi:home
+#    url_path: floorplan
+#    config: !include floorplan.yaml
 
 lovelace:
   mode: yaml
