Lucas in. Move annex2 to SpiritZ, assuming that's what we'll use there.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,6 +21,7 @@ homeassistant:
     package_monica: !include people/monica.yaml
     package_olga: !include people/olga.yaml
     package_elle: !include people/elle.yaml
+    package_lucas: !include people/lucas.yaml
 
     package_heating_on_demand: !include packages/heating-on-demand.yaml
 
