--- a/packages/bedroom-annex2/settings.yaml
+++ b/packages/bedroom-annex2/settings.yaml
@@ -6,5 +6,4 @@ group:
       - input_number.bedroom_annex2_temperature_off
       - input_number.bedroom_annex2_temperature_cosy
       - input_number.bedroom_annex2_temperature_sleep
-
-
+      - automation.bedroom_annex2_set_real_thermostats
