--- a/packages/bedroom-annex2/heating-on-demand.yaml
+++ b/packages/bedroom-annex2/heating-on-demand.yaml
@@ -3,9 +3,10 @@ homeassistant:
     climate.bedroom_annex2_thermostat:
       friendly_name: "Annex Bedroom 2 Heating"
     sensor.bedroom_annex2_mean_temperature:
-      friendly_name: "Annex Bedroom 2"
       icon: mdi:thermometer
       unit_of_measurement: "\xB0C"
+    automation.bedroom_annex2_set_real_thermostats:
+      friendly_name: Update Real Thermostats
 
 group:
   g_debug_bedroom_annex2_heating:
@@ -18,7 +19,7 @@ group:
     entities:
       - sensor.bedroom_annex2_mean_temperature
       - sensor.bedroom_annex2_current_temperature
-      - sensor.bedroom_annex2_temperature
+      - sensor.bedroom_annex2_west_air_temperature
 
   # Non-UI group which forwards setpoint updates
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
@@ -32,8 +33,10 @@ climate:
     heater: switch.bedroom_annex2_demand
     target_sensor: sensor.bedroom_annex2_mean_temperature
     max_temp: 25
-    min_temp: 5
+    min_temp: 8  # spirit-Z minimum
     target_temp: 10.0
+    cold_tolerance: 0.5
+    hot_tolerance: 0.0
 
 switch:
   - name: bedroom_annex2_demand
@@ -46,7 +49,7 @@ switch:
 sensor:
   - name: bedroom_annex2_current_temperature
     platform: mqtt
-    state_topic: 'ha/raw/sensor.bedroom_annex2_temperature/state'
+    state_topic: 'ha/raw/sensor.bedroom_annex2_west_air_temperature/state'
     ## dev: for mock mqtt devices
     #value_template: '{{ value_json.temperature }}'
     unit_of_measurement: "\xB0C"
@@ -71,10 +74,30 @@ automation:
   - alias: "bedroom_annex2_update_temperature"
     trigger:
       - platform: state
-        entity_id: sensor.bedroom_annex2_temperature
+        entity_id: sensor.bedroom_annex2_west_air_temperature
     action:
       - service: mqtt.publish
         data_template:
           topic: 'ha/raw/{{trigger.entity_id}}/state'
           payload: '{{ trigger.to_state.state }}'
 
+  # Sync all thermostats (real and virtual)
+  - alias: "bedroom_annex2_update_setpoint"
+    trigger:
+      - platform: state
+        entity_id: climate.bedroom_annex2_west_mode
+    action:
+      - service: climate.set_temperature
+        data_template:
+          entity_id: climate.bedroom_annex2_thermostat
+          temperature: '{{ trigger.to_state.attributes.temperature }}'
+
+  - alias: bedroom_annex2_set_real_thermostats
+    trigger:
+      - platform: state
+        entity_id: climate.bedroom_annex2_thermostat
+    action:
+      - service: climate.set_temperature
+        data_template:
+          entity_id: group.g_bedroom_annex2_thermostat
+          temperature: '{{ trigger.to_state.attributes.temperature }}'
