--- a/packages/bedroom-main3/voice-control.yaml
+++ b/packages/bedroom-main3/voice-control.yaml
@@ -5,23 +5,23 @@
 google_assistant:
   entity_config:
     climate.bedroom_main3_thermostat:
-      name: "Main Bedroom 3 Thermostat"
+      name: "Emma's Bedroom Thermostat"
       <<: &ga_bedroom_main3_expose
         expose: true
-        room: "Main Bedroom 3"
+        room: "Emma's Bedroom"
 
     group.bedroom_main3_lights:
-      name: "Main Bedroom 3 Lights"
+      name: "Emma's Bedroom Lights"
       <<: *ga_bedroom_main3_expose
 
     script.voice_bedroom_main3_off:
-      name: "Main Bedroom 3 Shutdown"
+      name: "Emma's Bedroom Shutdown"
       <<: *ga_bedroom_main3_expose
     script.voice_bedroom_main3_cosy:
-      name: "Main Bedroom 3 Cosy Mode"
+      name: "Emma's Bedroom Cosy Mode"
       <<: *ga_bedroom_main3_expose
     script.voice_bedroom_main3_sleep:
-      name: "Main Bedroom 3 Sleep Mode"
+      name: "Emma's Bedroom Sleep Mode"
       <<: *ga_bedroom_main3_expose
 
 script:
